[package]
name = "vproj"
version = "0.1.2"
edition = "2021"
authors = ["Alsein Xiang <xyh951115@live.com>"]
description = "Projects version in `Cargo.toml` files to make it ready to publish."
readme = "README.md"
repository = "https://github.com/AlseinX/vproj"
homepage = "https://github.com/AlseinX/vproj"
license-file = "LICENSE"

[dependencies]
toml_edit = "0.21.0"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
] }
futures = "0.3.29"
